fixed coloring tile issue

--- a/index.html
+++ b/index.html
@@ -56,6 +56,36 @@
                 <div class="tile" id="row5-tile4"></div>
             </div>
         </div>
+        <div class="key-container">
+          <button id="Q"></button>
+          <button id="W"></button>
+          <button id="E"></button>
+          <button id="R"></button>
+          <button id="T"></button>
+          <button id="Y"></button>
+          <button id="U"></button>
+          <button id="I"></button>
+          <button id="O"></button>
+          <button id="P"></button>
+          <button id="A"></button>
+          <button id="S"></button>
+          <button id="D"></button>
+          <button id="F"></button>
+          <button id="G"></button>
+          <button id="H"></button>
+          <button id="J"></button>
+          <button id="K"></button>
+          <button id="L"></button>
+          <button id="ENTER"></button>
+          <button id="Z"></button>
+          <button id="X"></button>
+          <button id="C"></button>
+          <button id="V"></button>
+          <button id="B"></button>
+          <button id="N"></button>
+          <button id="M"></button>
+          <button id="<]"></button>
+        </div>
     </div>
     <div class="ai-container"></div>
     <script src="App.js"></script>
