wordle without dictionaries imported

--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
         </div>
     </div>
     <div class="ai-container"></div>
-    <script src="App.js"></script>
+    <script type="module" src="App.js"></script>
 </body>
 </html>
